add latest news section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/7f479a55bc.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/7f479a55bc.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://necolas.github.io/normalize.css/latest/normalize.css"
@@ -41,102 +44,158 @@
         <div class="search-button-container"></div>
       </nav>
 
-      <div class="banner">Did you know we have a TECH FESTIVAL? Check it out →</div>
+      <div class="banner">
+        Did you know we have a TECH FESTIVAL? Check it out →
+      </div>
     </header>
     <section class="header-grid">
       <article class="huge">
         <div>
-            <img src="img/index.svg" class="tnw-cover-logo">
-            <p class="cover-date">Tuesday - April 7, 2020</p>
-            <h2 class="title-cover">
-              Facebook apologizes after AI blocks posts about DIY coronavirus
-              masks
-            </h2>
-            <ul class="cover-footer">
-              <li>by <a href="#">Thomas Macaulay</a></li>
-              <li>
-                <i class="far fa-clock"></i>
-                <p>1 hour ago</p>
-              </li>
-              <li>
-                <i class="fas fa-share-alt"></i>
-                15
-              </li>
-            </ul>
+          <img src="img/index.svg" class="tnw-cover-logo" />
+          <p class="cover-date">Tuesday - April 7, 2020</p>
+          <h2 class="title-cover">
+            Facebook apologizes after AI blocks posts about DIY coronavirus
+            masks
+          </h2>
+          <ul class="cover-footer">
+            <li>by <a href="#">Thomas Macaulay</a></li>
+            <li>
+              <i class="far fa-clock"></i>
+              <p>1 hour ago</p>
+            </li>
+            <li>
+              <i class="fas fa-share-alt"></i>
+              15
+            </li>
+          </ul>
         </div>
       </article>
       <article class="aside1 aside">
-          <p>INSIGHTS</p>
-          <h2 class="aside-head">How to make lemonade out of shit</h2>
-          <ul class="cover-footer">
-            <li>by <a href="#">Tristan Greene</a></li>
-            <li>
-              <i class="far fa-clock"></i>
-              <p>1 hour ago</p>
-            </li>
-            <li>
-              <i class="fas fa-share-alt"></i>
-              15
-            </li> 
-          </ul>
+        <p>INSIGHTS</p>
+        <h2 class="aside-head">How to make lemonade out of shit</h2>
+        <ul class="cover-footer">
+          <li>by <a href="#">Tristan Greene</a></li>
+          <li>
+            <i class="far fa-clock"></i>
+            <p>1 hour ago</p>
+          </li>
+          <li>
+            <i class="fas fa-share-alt"></i>
+            15
+          </li>
+        </ul>
       </article>
       <article class="aside2 aside">
-          <p>P</p>
-          <h2 class="aside-head">
-            WeWork sues SoftBank for scrapping its $3 billion rescue deal
-          </h2>
+        <p>Play</p>
+        <h2 class="aside-head">
+          WeWork sues SoftBank for scrapping its $3 billion rescue deal
+        </h2>
 
-          <ul class="cover-footer">
-            <li>by <a href="#">David Canellis</a></li>
-            <li>
-              <i class="far fa-clock"></i>
-              <p>1 hour ago</p>
-            </li>
-            <li>
-              <i class="fas fa-share-alt"></i>
-              15
-            </li>
-          </ul>
+        <ul class="cover-footer">
+          <li>by <a href="#">David Canellis</a></li>
+          <li>
+            <i class="far fa-clock"></i>
+            <p>1 hour ago</p>
+          </li>
+          <li>
+            <i class="fas fa-share-alt"></i>
+            15
+          </li>
+        </ul>
       </article>
     </section>
 
-    <div class="latest">
-      <article>
-        <div class="art-img"></div>
-        <p class="art-desc">
-          Report: Airbnb gouged for over 10% interest on billion-dollar loan
-        </p>
-        <p class="art-foot">
-          <span>David Canellis</span>
-          42 minutes ago
-        </p>
-      </article>
+    <section class="latest">
+      <h3 class="latest-news-header">Latest news ></h3>
+      <div class="latest-grid">
+        <article>
+          <div class="art-img art-img-1"></div>
+          <h4 class="art-desc">
+            Daily Distraction: Here are some free movies for your
+            popcorn-munching ass
+          </h4>
+          <p class="art-foot">
+            <span>David Canellis</span>
+            42 minutes ago
+          </p>
+        </article>
 
-      <article>
-        <div class="art-img"></div>
-        <p class="art-desc">
-          Report: Airbnb gouged for over 10% interest on billion-dollar loan
-        </p>
-        <p class="art-foot">
-          <span>David Canellis</span>
-          42 minutes ago
-        </p>
-      </article>
-      
-      <article>
-        <div class="art-img"></div>
-        <p class="art-desc">
-          Report: Airbnb gouged for over 10% interest on billion-dollar loan
-        </p>
-        <p class="art-foot">
-          <span>David Canellis</span>
-          42 minutes ago
-        </p>
-      </article>
+        <article>
+          <div class="art-img art-img-2"></div>
+          <h4 class="art-desc">
+            The internet is obsessed with redesigning the new PS5 controller
+          </h4>
+          <p class="art-foot">
+            <span>Mix</span>
+            42 minutes ago
+          </p>
+        </article>
 
-    </div>
-
-
-
+        <article>
+          <div class="art-img art-img-3"></div>
+          <h4 class="art-desc">
+            Zoom sued by shareholder after security issues tanked its stock
+            price
+          </h4>
+          <p class="art-foot">
+            <span>Ivan Mehta</span>
+            42 minutes ago
+          </p>
+        </article>
+        <article>
+          <div class="art-img art-img-4"></div>
+          <h4 class="art-desc">
+            Entrepreneurs get immediate PayPal and Stripe payment notifications
+            with CashNotify
+          </h4>
+          <p class="art-foot">
+            <span>TNW Deals</span>
+            42 minutes ago
+          </p>
+        </article>
+        <article>
+          <div class="art-img art-img-5"></div>
+          <h4 class="art-desc">
+            Study: No, electric car motors don’t adversely interfere with
+            pacemakers
+          </h4>
+          <p class="art-foot">
+            <span>Matthew Beedham</span>
+            42 minutes ago
+          </p>
+        </article>
+        <article>
+          <div class="art-img art-img-6"></div>
+          <h4 class="art-desc">
+            Why conspiracy theories flourish during pandemics
+          </h4>
+          <p class="art-foot">
+            <span>The Conversation</span>
+            42 minutes ago
+          </p>
+        </article>
+        <article>
+          <div class="art-img art-img-7"></div>
+          <h4 class="art-desc">
+            Research: How location-tracking apps could stop the spread of
+            coronavirus
+          </h4>
+          <p class="art-foot">
+            <span>The conversation</span>
+            42 minutes ago
+          </p>
+        </article>
+        <article>
+          <div class="art-img art-img-8"></div>
+          <h4 class="art-desc">
+            MIT's sprayable sensor can turn your sofa armrest into a TV remote
+          </h4>
+          <p class="art-foot">
+            <span>Ivan Mehta</span>
+            42 minutes ago
+          </p>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
