Fix header grid

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               onmouseover="myFunction()"
               onmouseout="myFunction()"
             >
-              <img src="/img/tnw.svg" alt="" />
+              <img src="img/tnw.svg" alt="" />
               <ul class="popup-menu" id="myPopup">
                 <li>
                   News
@@ -89,11 +89,13 @@
     </header>
 
     <section class="header-grid">
-      <h2 class="hidden-elements">Header grid</h2>
       <article class="huge">
-        <div>
-          <img src="img/index.svg" alt="" class="tnw-cover-logo" />
-          <p class="cover-date">Tuesday - April 7, 2020</p>
+        <div class="huge-top">
+            <img src="img/index.svg" class="tnw-cover-logo" />
+            <p class="cover-date">Tuesday - April 7, 2020</p>
+        </div>
+        <div class="huge-bottom">
+          <p class="insights">INSIGHTS</p>
           <h2 class="title-cover">
             Facebook apologizes after AI blocks posts about DIY coronavirus
             masks
@@ -112,7 +114,7 @@
         </div>
       </article>
       <article class="aside1 aside">
-        <p>INSIGHTS</p>
+        <p class="insights">INSIGHTS</p>
         <h2 class="aside-head">How to make lemonade out of shit</h2>
         <ul class="cover-footer">
           <li>by <a href="#">Tristan Greene</a></li>
@@ -127,7 +129,7 @@
         </ul>
       </article>
       <article class="aside2 aside">
-        <p>Play</p>
+        <p class="insights">Play</p>
         <h2 class="aside-head">
           WeWork sues SoftBank for scrapping its $3 billion rescue deal
         </h2>
