Add funds section

--- a/index.html
+++ b/index.html
@@ -240,6 +240,94 @@
         </article>
       </div>
     </section>
+    <section class="funding">
+      <div class="funding-top">
+        <a href="#" class="rounds-left">
+          Latest funding rounds on Index.co >
+        </a>
+        
+        <div class="rounds-r">
+          <a href="#" class="rounds-right">Add Info</a>
+          <a href="#" class="rounds-right">Get Updates by email</a>
+          <a href="#" class="rounds-right rounds-right-last">See more</a>
+        </div>
+      </div>
+
+      <div class="funding-main">
+        <div class="fund">
+          <div class="fund-top">
+            <h3>Neosurance</h3>
+            <div class="fund-top-bottom">
+              <p class="fund-amt">$1.1M</p>
+              <p class="fund-type">VENTURE CAPITAL</p>
+            </div>
+          </div>
+
+          <div class="fund-foot">
+            <p>
+              Neosurance Closes €1.1M Funding Round
+            </p>
+            <small>on FinSMEs</small>
+          </div>
+        </div>
+
+        <div class="fund">
+          <div class="fund-top">
+            <h3>Neosurance</h3>
+            <div class="fund-top-bottom">
+              <p class="fund-amt">$1.1M</p>
+              <p class="fund-type">VENTURE CAPITAL</p>
+            </div>
+          </div>
+
+          <div class="fund-foot">
+            <p>
+              Neosurance Closes €1.1M Funding Round
+            </p>
+            <small>on FinSMEs</small>
+          </div>
+        </div>
+
+        <div class="fund">
+          <div class="fund-top">
+            <h3>Neosurance</h3>
+            <div class="fund-top-bottom">
+              <p class="fund-amt">$1.1M</p>
+              <p class="fund-type">VENTURE CAPITAL</p>
+            </div>
+          </div>
+
+          <div class="fund-foot">
+            <p>
+              Neosurance Closes €1.1M Funding Round
+            </p>
+            <small>on FinSMEs</small>
+          </div>
+        </div>
+
+        <div class="fund">
+          <div class="fund-top">
+            <h3>Neosurance</h3>
+            <div class="fund-top-bottom">
+              <p class="fund-amt">$1.1M</p>
+              <p class="fund-type">VENTURE CAPITAL</p>
+              <img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F740190470190583808%2FNkOrw685.jpg&signature=525ce098cc1c33363d3899356e1c0b78" alt="" class="fund-img">
+            </div>
+          </div>
+
+          <div class="fund-foot">
+            <p>
+              Neosurance Closes €1.1M Funding Round
+            </p>
+            <small>on FinSMEs</small>
+          </div>
+        </div>
+      </div>
+      
+    </section>
+
+
+
     <script>
       // When the user scrolls down 80px from the top of the document, resize the navbar's padding and the logo's font size
       window.onscroll = function () {
