Add updated funding section

--- a/index.html
+++ b/index.html
@@ -260,43 +260,13 @@
             <div class="fund-top-bottom">
               <p class="fund-amt">$1.1M</p>
               <p class="fund-type">VENTURE CAPITAL</p>
+              <img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F740190470190583808%2FNkOrw685.jpg&signature=525ce098cc1c33363d3899356e1c0b78" alt="" class="fund-img">
             </div>
           </div>
-
-          <div class="fund-foot">
-            <p>
-              Neosurance Closes €1.1M Funding Round
-            </p>
-            <small>on FinSMEs</small>
+          <div class="fund-center">
+            <p>Insurance</p>
+            <p>Net Insurance, +2</p>
           </div>
-        </div>
-
-        <div class="fund">
-          <div class="fund-top">
-            <h3>Neosurance</h3>
-            <div class="fund-top-bottom">
-              <p class="fund-amt">$1.1M</p>
-              <p class="fund-type">VENTURE CAPITAL</p>
-            </div>
-          </div>
-
-          <div class="fund-foot">
-            <p>
-              Neosurance Closes €1.1M Funding Round
-            </p>
-            <small>on FinSMEs</small>
-          </div>
-        </div>
-
-        <div class="fund">
-          <div class="fund-top">
-            <h3>Neosurance</h3>
-            <div class="fund-top-bottom">
-              <p class="fund-amt">$1.1M</p>
-              <p class="fund-type">VENTURE CAPITAL</p>
-            </div>
-          </div>
-
           <div class="fund-foot">
             <p>
               Neosurance Closes €1.1M Funding Round
@@ -314,7 +284,52 @@
               <img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F740190470190583808%2FNkOrw685.jpg&signature=525ce098cc1c33363d3899356e1c0b78" alt="" class="fund-img">
             </div>
           </div>
+          <div class="fund-center">
+            <p>Insurance</p>
+            <p>Net Insurance, +2</p>
+          </div>
+          <div class="fund-foot">
+            <p>
+              Neosurance Closes €1.1M Funding Round
+            </p>
+            <small>on FinSMEs</small>
+          </div>
+        </div>
 
+        <div class="fund">
+          <div class="fund-top">
+            <h3>Neosurance</h3>
+            <div class="fund-top-bottom">
+              <p class="fund-amt">$1.1M</p>
+              <p class="fund-type">VENTURE CAPITAL</p>
+              <img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F740190470190583808%2FNkOrw685.jpg&signature=525ce098cc1c33363d3899356e1c0b78" alt="" class="fund-img">
+            </div>
+          </div>
+          <div class="fund-center">
+            <p>Insurance</p>
+            <p>Net Insurance, +2</p>
+          </div>
+          <div class="fund-foot">
+            <p>
+              Neosurance Closes €1.1M Funding Round
+            </p>
+            <small>on FinSMEs</small>
+          </div>
+        </div>
+
+        <div class="fund fund-last">
+          <div class="fund-top">
+            <h3>Neosurance</h3>
+            <div class="fund-top-bottom">
+              <p class="fund-amt">$1.1M</p>
+              <p class="fund-type">VENTURE CAPITAL</p>
+              <img src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F740190470190583808%2FNkOrw685.jpg&signature=525ce098cc1c33363d3899356e1c0b78" alt="" class="fund-img">
+            </div>
+          </div>
+          <div class="fund-center">
+            <p>Insurance</p>
+            <p>Net Insurance, +2</p>
+          </div>
           <div class="fund-foot">
             <p>
               Neosurance Closes €1.1M Funding Round
