optimize mobile design

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
           <li>Contact</li>
         </ul>
       </nav>
-
       <div class="sticky-nav">
         <nav class="lowernav">
           <ul id="lowerlist">
@@ -70,12 +69,17 @@
                 </li>
               </ul>
             </li>
-            <li>LATEST</li>
-            <li>HARD FORK</li>
-            <li>PLUGGED</li>
-            <li>FUNDAMENTALS</li>
-            <li>README</li>
-            <li>NEURAL</li>
+            <li id="logo-corner-mobile">
+              <img src="img/tnw.svg" alt="" />
+              
+              </ul>
+            </li>
+            <li class="change-on-mobile">LATEST</li>
+            <li class="change-on-mobile">HARD FORK</li>
+            <li class="change-on-mobile">PLUGGED</li>
+            <li class="change-on-mobile">FUNDAMENTALS</li>
+            <li class="change-on-mobile">README</li>
+            <li class="change-on-mobile">NEURAL</li>
           </ul>
           <div class="search-button-container">
             <i class="fas fa-search fa-flip-horizontal fa-lg"></i>
