Complete deals section

--- a/index.html
+++ b/index.html
@@ -341,6 +341,79 @@
       
     </section>
 
+    <div class="latest-deals">
+      <div class="deals-top">
+          <a href="#" class="deals-top-left">Latest Deals ></a>
+          <a href="#" class="deals-top-right">See all Deals</a>
+      </div>
+      <div class="deals-body">
+        <div class="deals">
+          <div class="deals-img"></div>
+          <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
+          <p class="deals-price">
+            <span class="crossed">$200</span>
+            <span class="promo">$19.99</span>
+          </p>
+        </div>
+        <div class="deals">
+          <div class="deals-img"></div>
+          <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
+          <p class="deals-price">
+            <span class="crossed">$200</span>
+            <span class="promo">$19.99</span>
+          </p>
+        </div>
+        <div class="deals">
+          <div class="deals-img"></div>
+          <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
+          <p class="deals-price">
+            <span class="crossed">$200</span>
+            <span class="promo">$19.99</span>
+          </p>
+        </div>
+        <div class="deals">
+          <div class="deals-img"></div>
+          <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
+          <p class="deals-price">
+            <span class="crossed">$200</span>
+            <span class="promo">$19.99</span>
+          </p>
+        </div>
+        <div class="deals">
+          <div class="deals-img"></div>
+          <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
+          <p class="deals-price">
+            <span class="crossed">$200</span>
+            <span class="promo">$19.99</span>
+          </p>
+        </div>
+        <div class="deals">
+          <div class="deals-img"></div>
+          <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
+          <p class="deals-price">
+            <span class="crossed">$200</span>
+            <span class="promo">$19.99</span>
+          </p>
+        </div>
+        <div class="deals">
+          <div class="deals-img"></div>
+          <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
+          <p class="deals-price">
+            <span class="crossed">$200</span>
+            <span class="promo">$19.99</span>
+          </p>
+        </div>
+        <div class="deals">
+          <div class="deals-img"></div>
+          <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
+          <p class="deals-price">
+            <span class="crossed">$200</span>
+            <span class="promo">$19.99</span>
+          </p>
+        </div>
+      </div>
+    </div>
+
 
 
     <script>
