--- a/index.html
+++ b/index.html
@@ -38,38 +38,8 @@
       </nav>
       <div class="sticky-nav">
         <nav class="lowernav">
-          <ul id="lowerlist">
-            <li
-              id="logo-corner"
-              onmouseover="myFunction()"
-              onmouseout="myFunction()"
-            >
-              <img src="img/tnw.svg" alt="" />
-              <ul class="popup-menu" id="myPopup">
-                <li>
-                  News
-                </li>
-                <li>
-                  Events
-                </li>
-                <li>
-                  Index
-                </li>
-                <li>
-                  TQ
-                </li>
-                <li>
-                  Deals
-                </li>
-                <li>
-                  Answers
-                </li>
-                <li>
-                  TNW X
-                </li>
-              </ul>
-            </li>
-            <li id="logo-corner-mobile">
+          <ul class="lowerlist">
+            <li class="logo-corner-mobile">
               <img src="img/tnw.svg" alt="" />
             </li>
             <li class="change-on-mobile">LATEST</li>
@@ -83,7 +53,7 @@
             <i class="fas fa-search fa-flip-horizontal fa-lg"></i>
           </div>
         </nav>
-        <div id="banner">
+        <div class="banner">
           Did you know we have a TECH FESTIVAL? Check it out →
         </div>
       </div>
