add missing cover imgs

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <p class="fund-amt">$1.1M</p>
               <p class="fund-type">VENTURE CAPITAL</p>
               <img
-                src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F740190470190583808%2FNkOrw685.jpg&signature=525ce098cc1c33363d3899356e1c0b78"
+                src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F674824432267882496%2FHodUGxme.jpg&signature=77e7fac7899cf9bbc67c4c9a1ca35e3d"
                 alt=""
                 class="fund-img"
               />
@@ -258,7 +258,7 @@
               <p class="fund-amt">$1.1M</p>
               <p class="fund-type">VENTURE CAPITAL</p>
               <img
-                src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F740190470190583808%2FNkOrw685.jpg&signature=525ce098cc1c33363d3899356e1c0b78"
+                src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1247453178280337409%2FC2aNcKN7.jpg&signature=bba389df2b9afc7378c28319af18c901"
                 alt=""
                 class="fund-img"
               />
@@ -283,7 +283,7 @@
               <p class="fund-amt">$1.1M</p>
               <p class="fund-type">VENTURE CAPITAL</p>
               <img
-                src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F740190470190583808%2FNkOrw685.jpg&signature=525ce098cc1c33363d3899356e1c0b78"
+                src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1124794302310150146%2FtqFn7FWE.jpg&signature=67692c2ac8a25aebaf32fc7d2b1dc6e0"
                 alt=""
                 class="fund-img"
               />
@@ -308,7 +308,7 @@
               <p class="fund-amt">$1.1M</p>
               <p class="fund-type">VENTURE CAPITAL</p>
               <img
-                src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F740190470190583808%2FNkOrw685.jpg&signature=525ce098cc1c33363d3899356e1c0b78"
+                src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1242840692591693824%2FbkDpXyb7.jpg&signature=cc1ec04ecf98aa830fb3e718f1d0e306"
                 alt=""
                 class="fund-img"
               />
@@ -921,7 +921,7 @@
       </div>
       <div class="deals-body">
         <div class="deals">
-          <div class="deals-img"></div>
+          <div class="deals-img deals-img1"></div>
           <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
           <p class="deals-price">
             <span class="crossed">$200</span>
@@ -929,7 +929,7 @@
           </p>
         </div>
         <div class="deals">
-          <div class="deals-img"></div>
+          <div class="deals-img deals-img2"></div>
           <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
           <p class="deals-price">
             <span class="crossed">$200</span>
@@ -937,7 +937,7 @@
           </p>
         </div>
         <div class="deals">
-          <div class="deals-img"></div>
+          <div class="deals-img deals-img3"></div>
           <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
           <p class="deals-price">
             <span class="crossed">$200</span>
@@ -945,7 +945,7 @@
           </p>
         </div>
         <div class="deals">
-          <div class="deals-img"></div>
+          <div class="deals-img deals-img4"></div>
           <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
           <p class="deals-price">
             <span class="crossed">$200</span>
@@ -953,7 +953,7 @@
           </p>
         </div>
         <div class="deals">
-          <div class="deals-img"></div>
+          <div class="deals-img deals-img5"></div>
           <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
           <p class="deals-price">
             <span class="crossed">$200</span>
@@ -961,7 +961,7 @@
           </p>
         </div>
         <div class="deals">
-          <div class="deals-img"></div>
+          <div class="deals-img deals-img6"></div>
           <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
           <p class="deals-price">
             <span class="crossed">$200</span>
@@ -969,7 +969,7 @@
           </p>
         </div>
         <div class="deals">
-          <div class="deals-img"></div>
+          <div class="deals-img deals-img7"></div>
           <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
           <p class="deals-price">
             <span class="crossed">$200</span>
@@ -977,7 +977,7 @@
           </p>
         </div>
         <div class="deals">
-          <div class="deals-img"></div>
+          <div class="deals-img deals-img8"></div>
           <a href="#" class="deals-title">AWS Cloud Essentials Course</a>
           <p class="deals-price">
             <span class="crossed">$200</span>
